# project763

./: PROJECT_RECAP.md  README (1).md  README.md  badger_mock.db  generate_mock_data.py  item_catalog.csv  move_items.csv  moves.csv  moves_ml_wide.csv  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
code/calibration_graph/: 01b_time_of_flight_mw_fem.py  02a_Resonator_Spectroscopy.py  02b_resonator_spectroscopy_vs_flux.py  02c_resonator_spectroscopy_vs_amplitude.py  03a_Qubit_Spectroscopy.py  03b_qubit_spectroscopy_vs_flux.py  04_Power_Rabi.py  04_Power_Rabi_multi.py  05_T1.py  05b_T2e.py  05c_T2_CPMG.py  06_Ramsey.py  07a_Readout_Frequency_Optimization.py  07b_Readout_Power_Optimization.py  07c_IQ_Blobs.py  08_Ramsey_vs_Flux_Calibration.py  09a_Stark_Detuning.py  09b_DRAG_Calibration_180_minus_180.py  09c_DRAG_Calibration_180_90.py  10a_Single_Qubit_Randomized_Benchmarking.py  10c_Single_Qubit_Randomized_Benchmarking_virtualZ.py  14_XY_Z_delay.py  21_Zgate_calibration.py  22_Z_gate_error_amplification.py  23_Single_Qubit_Randomized_Benchmarking_fluxZ.py
code/low_level_control_examples/: 01_resonator_spectroscopy.py  hello_config.py
code/test_programs/: test_qua_execution.py  test_qualibrate.py  test_quam.py
config/: create_qualibrate_config.py
config/quam_state/: state.json  wiring.json
data/: .gitkeep
environments/: change_environment.py  create_environment.py  env_utils.py  save_environment.py
environments/QOP 3.2.4/: pyproject.toml
environments/QOP 3.2.4/legacy/: requirements.txt
environments/QOP 3.3.0/: pyproject.toml
environments/QOP 3.4.1/: pyproject.toml
local_packages/quam_libs/: README.md  pyproject.toml
local_packages/quam_libs/quam_libs/: cloud_interface.py  macros.py
local_packages/quam_libs/quam_libs/components/: charge_line.py  flux_line.py  ocs_transmon.py  quam_root.py  readout_resonator.py  transmon.py
local_packages/quam_libs/quam_libs/components/gates/: __init__.py
local_packages/quam_libs/quam_libs/lib/: save_utils.py
models/: pert_estimator_model.keras
notebooks/: exploration.ipynb
src/: __init__.py  data_loader.py  model.py  pert_keras_demo.py  train.py  utils.py
