[project]
name = "qolab-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2wsgi==1.10.10",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argcomplete==3.6.2",
    "asteval==1.0.6",
    "betterproto==2.0.0b7",
    "black==25.1.0",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cryptography==45.0.4",
    "cycler==0.12.1",
    "datadog-api-client==2.38.0",
    "datamodel-code-generator==0.26.5",
    "deepdiff>=8.5.0",
    "dependency-injector==4.48.1",
    "deprecation==2.1.0",
    "dill==0.4.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.14",
    "fonttools==4.58.4",
    "genson==1.3.0",
    "google-api-core==2.25.1",
    "google-api-python-client==2.174.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.73.1",
    "grpclib==0.4.5",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "ibm-cloud-sdk-core==3.24.2",
    "ibm-platform-services==0.66.2",
    "idna==3.10",
    "inflect==5.6.2",
    "iqcc-cloud-client",
    "isort==5.13.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kiwisolver==1.4.8",
    "lmfit==1.3.3",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "marshmallow-polyfield==5.11",
    "matplotlib==3.10.3",
    "multidict==6.5.1",
    "mypy-extensions==1.1.0",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pandas==2.3.0",
    "pathspec==0.12.1",
    "pbr==6.1.1",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "plotly==5.24.1",
    "proto-plus==1.26.1",
    "protobuf==4.25.8",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyjwt==2.10.1",
    "pyparsing==3.2.3",
    "pyspnego==0.11.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pyvisa==1.15.0",
    "pyvisa-py==0.8.0",
    "pyyaml==6.0.2",
    "qiskit==2.1.0",
    "qiskit-experiments==0.11.0",
    "qiskit-ibm-experiment==0.4.8",
    "qiskit-ibm-runtime==0.40.1",
    "qm-octave==2.1.3",
    "qm-qua==1.2.3a1",
    "qualang-tools==0.19.5",
    "qualibrate==0.2.2",
    "qualibrate-app==0.3.5",
    "qualibrate-config==0.1.6",
    "qualibrate-core==0.3.2",
    "qualibrate-runner==0.3.3",
    "quam",
    "quam-libs",
    "requests==2.32.4",
    "requests-ntlm==1.3.0",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "rustworkx==0.16.0",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "stevedore==5.4.1",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tinydb==4.8.2",
    "tomli-w==1.2.0",
    "tqdm==4.67.1",
    "typeguard==4.4.4",
    "types-networkx==3.2.1.20240918",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uncertainties==3.2.3",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "websocket-client==1.8.0",
    "xarray==2025.6.1",
]

[project.optional-dependencies]
windows = [
    "sspilib>=0.3.1",
]

[tool.uv]
override-dependencies = ["quam @ git+https://github.com/qua-platform/quam.git@11391d518036c149eeadee649ba1386f44177b1f"]
constraint-dependencies = []

[tool.uv.sources]
quam = { git = "https://github.com/qua-platform/quam.git", rev = "11391d518036c149eeadee649ba1386f44177b1f" }
quam-libs = { path = "local_packages/quam_libs" }
iqcc-cloud-client = { path = "local_packages/iqcc_cloud_client/iqcc_cloud_client-0.5.5-py3-none-any.whl" }

[metadata]
environment_name = "QOP 3.2.4"
QOP_version = "3.2.4"
